# aul

./: .clang-format  .gitignore  CMakeLists.txt  README.md  check_leacks.sh  format.sh  liens  make_str.sh  run_tests.sh  test_lex.sh
cmake/Modules/: AddCMockaTest.cmake  AddMockedTest.cmake
lex_tests/: if_test_1.c  simple_test_1.c  test_c.c  while_test_1.c
report/: build_report.sh
src/: CMakeLists.txt  asm.md  ast.c  ast.h  aul_utils.h  ir.h  lex.l  lex.yy.c  main.c  symbol_table.c  symbol_table.h  syntax.y  test_ast.c  tests.c  types.h
src/compiler/: CMakeLists.txt  ast.h  co_ast.c  co_ast.h  co_ast_private.h  co_ir.c  co_ir.h  co_main.c  co_symbol_table.c  co_symbol_table.h  co_tests.c  co_types.c  co_types.h  ir.c  lex.l  lex.yy.c  lex.yy.h  main.c  syntax.c  syntax.h  syntax.y  tests.c  types.c
src/virtual_machine/: CMakeLists.txt  machine.c  machine.h  vm_machine.c  vm_machine.h  vm_main.c  vm_memory.c  vm_memory.h  vm_op_code.c  vm_op_code.h
tests/: CMakeLists.txt  test_co.c
vhd/: amu.vhd  common.vhd  core.vhd  decoder.vhd  fetch.vhd  instr_memory.vhd  memory.vhd  memory_controller.vhd  pipe_last.vhd  pipeline_early.vhd  pipeline_late.vhd  print_unit.vhd  register_controler.vhd  registers_bank.vhd  test_core.vhd  test_reg.vhd  ual.vhd  ual_test.vhd
